--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -5,7 +5,7 @@
     http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
 <welcome-file-list>
-	<welcome-file>dashBoard.jsp</welcome-file>
+	<welcome-file>applications.jsp</welcome-file>
 </welcome-file-list>
 <servlet>
     <servlet-name>Service</servlet-name>
